Renamed XVRL datatypes from XSD and did follow-up cleansing